--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-    <link rel="stylesheet" href="styleheader.css" />
-    <link rel="stylesheet" href="stylefooter.css" />
     <title>TO-DO-LIST</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
     <!-- Paste here -->
     <link
     rel="stylesheet"
@@ -21,11 +21,10 @@
      <!-- HEADER START -->
      <!-- Start Header  -->
      <div class="menu-bar">
-        <h1 class="logo">WEB<span>TRACK</span></h1>
+        <h1 class="logo">L . S . <span>Rathore</span></h1>
         <ul>
-          <li><a href="#">Home</a></li>
-          
-          <li><a href="https://lakhan0007.github.io/Social/" target="_blank">About</a></li>
+          <li><a href="https://lakhan0007.github.io/All-Project/">HOME</a></li>
+          <li><a href="https://lakhan0007.github.io/Social/" target="_blank">ABOUT</a></li>
           
         </ul>
       </div>
